src/styles.scss
@import "../node_modules/bootstrap/scss/bootstrap.scss";

/* TEMPLATE STYLES */
$colors: (
  email:      rgba(0,0,0,0.54),
  google:     #db3236,
  facebook:   #3b5998,
  twitter:    #55acee,
  linkedin:   #0082CA,
  github:     #333333
);

.gplus-ic{color:#DD4B39!important}
.gplus-ic:focus,.gplus-ic:hover{color:#DD4B39}

.fb-ic{color:#3B5998!important}
.fb-ic:focus,.fb-ic:hover{color:#3B5998}

.tw-ic{color:#55ACEE!important}
.tw-ic:focus,.tw-ic:hover{color:#55ACEE}

.li-ic{color:#0082CA!important}
.li-ic:focus,.li-ic:hover{color:#0082CA}

.git-ic{color:#333!important}
.git-ic:focus,.git-ic:hover{color:#333}

.email-ic{color:#4B515D!important}
.email-ic:focus,.email-ic:hover{color:#4B515D}

body {
  padding-top: 64px;
}
@media screen and (max-width: 768px) {
  body { padding-top: 0px; }
}

.flex-center {
  color: #fff;
}

.intro-1 {
  background: url("assets/img/hero.png") no-repeat center center;
  background-size: cover;
}

.text-center {
  text-align: center!important;
}

.section .section-heading {
  margin-top: 2rem;
  margin-bottom: 4rem;
}
.section-heading {
  text-align: center;
}
@media only screen and (min-width: 1200px) {
  .h1-responsive, .section .section-heading, .section-heading h1 {
    font-size: 250%;
  }
}

#toast-container>div, .author-box, .btn, .btn-floating, .card, .card-cascade-2 .card-block, .card-cascade.wider .card-block, .card-wrapper .back, .card-wrapper .front, .chip, .dropdown-content, .dropdown-menu, .jumbotron, .list-group, .navbar, .pager li a, .pagination .active .page-link, .popover, .pricing-card .price .version, .side-nav, .social-list, .tag, .z-depth-1 {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
}

.alert, .author-box, .breadcrumb, .card, .card .card-header, .dropdown-menu, .file-custom, .input-group-addon, .jumbotron, .list-group .list-group-item, .modal-content, .nav .nav-link, .nav-tabs, .navbar, .navbar-toggler, .page-item:first-child .page-link, .page-item:last-child .page-link, .pagination-lg .page-item:first-child .page-link, .pagination-lg .page-item:last-child .page-link, .pagination-sm .page-item:first-child .page-link, .pagination-sm .page-item:last-child .page-link, .popover, .tag, .tooltip-inner, img {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
}

.author-box, .jumbotron {
  background-color: #fff;
  padding: 2rem;
}

.author-box {
  padding: 3rem;
}

.icons-sm {
  padding:.5rem;
  margin:.5rem;
  font-size:1.2rem;
}

.section.team-section .avatar ul{
  list-style-type:none;
  padding:0;
  text-align:center;
}

.section.team-section .avatar{
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
  -webkit-box-align:center;
  -webkit-align-items:center;
  -ms-flex-align:center;
  align-items:center;
  height:100%;
}

.section.team-section .avatar p {
  margin:0;
}

.section.team-section .avatar ul li {
  margin-bottom:1rem;
}

.section.team-section .avatar {
  margin-bottom:2rem;
  height:auto;
}

.section.team-section .avatar .rounded-circle {
  max-width:170px;
}

.section.team-section .avatar img {
  max-width:200px;
  height:auto
}

.section.team-section .title-color {
  font-weight:400;
  color:rgba(189, 61, 61, 0.6);
}

.section.team-section h4,
.section.team-section h5 {
  margin-bottom:1rem;
}

.section.team-section .grey-text {
  color:#6e6e6e!important;
}

.sponsors {
  text-align: center;
  padding-bottom: 45px;
}

.sponsor-img {
  border: 0;
  vertical-align: middle;
  display: inline-block;
  width: 256px;
  max-height: 100%;  /* <-- Set maximum height to 100% of its parent */
  max-width: 100%;   /* <-- Set maximum width to 100% of its parent */
}

